--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,8 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.15.2",
     "asyncio>=3.4.3",
     "dspy>=2.6.23",
     "fastapi>=0.115.12",
     "mlflow>=2.22.0",
+    "pydantic>=2.11.4",
+    "pydantic-settings>=2.9.1",
+    "sqlalchemy>=2.0.41",
+    "uvicorn>=0.34.2",
 ]
